# daily-meals

./: .gitignore  APPID_CONFIG.md  ARCHITECTURE.md  QUICK_START.md  README.md  START_NOW.md  STEP1_REGISTER.md  STEP2_IMPORT.md
miniprogram/: .eslintrc.js  CHECKLIST.md  RELEASE.md  app.js  app.json  app.wxss  preview.md  privacy.html  project.config.json
miniprogram/pages/index/: index.js  index.wxml  index.wxss
miniprogram/pages/menu/: menu.js  menu.wxml  menu.wxss
miniprogram/pages/recipe/: recipe.js  recipe.wxml  (+1 more)
miniprogram/utils/: api.js
openspec/specs/: api-standardization.md
server/: .env.example  README.md  index.js  package.json
server-rust/: .env.example  CODE_QUALITY.md  Cargo.toml  INSTALL.md  README.md  RUST_GUIDE.md
server-rust/src/: config.rs  error.rs  main.rs
server-rust/src/ai/: mod.rs
server-rust/src/models/: dish.rs  ingredient.rs  mod.rs  recipe.rs
server-rust/src/routes/: menu.rs  mod.rs  recipe.rs  shopping.rs
server-rust/src/services/: menu_service.rs  mod.rs  recipe_service.rs  shopping_service.rs
server-rust/src/tests/: mod.rs
server-rust/src/utils/: response.rs
server/config/: swagger.js
server/controllers/: menuController.js  recipeController.js  shoppingController.js
server/docs/: api.md
server/middleware/: errorHandler.js
server/openapi/: openapi.yaml
server/routes/: menu.js  recipe.js  shopping.js
server/services/: menuService.js  recipeService.js  shoppingService.js
server/utils/: errors.js  response.js
src/menu_generator/: README.md
src/recipe_guide/: README.md
src/shopping_list/: README.md
(+25 files in other folders)
